@@ -1,4 +1,6 @@
 DIST fotoxx-5.7.2.tar.gz 927313 RMD160 d11f455205d1bc697f16718d4851a567eb0a8465 SHA1 ec785c51526db9d4e3d0d85ea602388e346baabc SHA256 10835c1ee9112a92263835f738367e972c67e6e4ae0ef26dc2a33fdff688241a
+DIST fotoxx-5.8.tar.gz 931835 RMD160 4d79d170545a633e89481933531a28ea3f642b0a SHA1 666e072a85b31a32124411658a9cf98e9a6d458f SHA256 24e0e940eb265d48a528746b44e14ee0e8354cbc262e90576930b59036c8af71
 EBUILD fotoxx-5.7.2.ebuild 755 RMD160 37da1cc736245e75574e13a911620e8ad2ecf7cb SHA1 50483cabffa9c24590eb8256d77a30d381dbb572 SHA256 c35fb46cfcc8b45ab48a035127aad8ec59445db8e403dca7e62c20feaf953044
-MISC ChangeLog 1940 RMD160 a51f9fd55d4ca110a218c9e21bfe1f2173acce79 SHA1 0a53d97e06c6e001cd0445c6f2ac822c56ca8bad SHA256 b9b6eda45b6adbdb428926f35f7495e3640c1a24dd711fb35e9578537e490326
+EBUILD fotoxx-5.8.ebuild 759 RMD160 e9146c51b8274911645385a9eaf38fae840ec269 SHA1 7b1b28f29404f1c9fddd784e549f82e95608810c SHA256 4bb032561b3721616f6470bf4372bddda2d9a4a10d0f4eee08d79c37fb9a9aae
+MISC ChangeLog 2091 RMD160 a0f7bc7398199fa663df433ebd5b148425582029 SHA1 530c22b6a8d52d8f1e95734b1f861fa828cc3325 SHA256 48066314427d23ac009be88645b6974e3421fab4a6609d8238731050d58335f2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
