@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-5.8.ebuild:
+  Version bumb for Fotoxx. Keeping previous version as this is unstable.
+
   21 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
   -fotoxx-5.7.1.ebuild, +fotoxx-5.7.2.ebuild:
   Version bumb for Fotoxx.
